# ci-cd

./: .pre-commit-config.yaml  pyproject.toml  requirement.txt
.github/: pull_request_template.md
.github/workflows/: pre-commit.yml
